# nbomed-win

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  common.cpp  main.cpp  platform.cpp  platform.h
